--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ DB_HOST='127.0.0.1'
 DB_PORT=5432
 
 JWT_SECRET=secret
+JWT_EXPIRES_S=3600
+JWT_REFRESH_EXPIRES_D=365
 
 SERVER_PORT=5001
 SERVER_HOST='127.0.0.1'
