refresh token added

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DB_HOST='127.0.0.1'
 DB_PORT=5432
 
 JWT_SECRET=secret
+JWT_REFRESH_SECRET_KEY=secret
 JWT_EXPIRES_S=3600
 JWT_REFRESH_EXPIRES_D=365
 
