- refactoring - update and delete methods in repository - InModels, OutModels - API update user - refresh token

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
-# Development dependencies:
+# Development additional dependencies:
 pytest
-# pytest-freezegun
-# requests
 pytest-asyncio
 httpx
+
+# pytest-freezegun
